# Logsentry

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  clustering.py  generator.py  parser.py
tests/: test_clustering.py  test_generator.py  test_parser.py
