[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logsentry"
version = "0.1.0"
description = "AI-assisted log clustering and root-cause summarization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
]  

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
logsentry = "logsentry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
